add view, end fixed warnings